--- a/app/src/main/res/layout/activity_create3.xml
+++ b/app/src/main/res/layout/activity_create3.xml
@@ -40,6 +40,27 @@
             android:fontFamily="@font/notosans_regular" />
     </com.google.android.material.textfield.TextInputLayout>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/btn_once_date"
+            style="@style/Base.Widget.AppCompat.ImageButton"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/ic_menu_agenda" />
+
+        <TextView
+            android:id="@+id/tv_once_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="date picker" />
+    </LinearLayout>
+
     <Button
         android:id="@+id/btnSimpan3"
         android:layout_width="match_parent"
