--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,16 +11,21 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
 
-
-
     </com.google.android.material.appbar.AppBarLayout>
 
     <include
         layout="@layout/content_main3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="start|center_vertical"/>
+        android:layout_gravity="start|center_vertical" />
 
+    <Switch
+        android:id="@+id/switchtheme"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="255dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:checked="false"/>
 
     <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
     <!--        android:id="@+id/fabAdd3"-->
