--- a/app/src/main/res/layout/fragment_dialog_edit3.xml
+++ b/app/src/main/res/layout/fragment_dialog_edit3.xml
@@ -34,6 +34,27 @@
             android:inputType="number"
             android:textColor="@color/primary_text"
             android:textSize="16sp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="16dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/btn_once_date"
+                style="@style/Base.Widget.AppCompat.ImageButton"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:src="@android:drawable/ic_menu_agenda" />
+
+            <TextView
+                android:id="@+id/tv_once_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="date picker" />
+        </LinearLayout>
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
