--- a/app/src/main/res/layout/activity_money_currency_converter.xml
+++ b/app/src/main/res/layout/activity_money_currency_converter.xml
@@ -13,6 +13,9 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="0dp"
         android:orientation="horizontal">
 
         <TextView
@@ -24,22 +27,53 @@
 
     </LinearLayout>
 
+    <View
+        android:id="@+id/divider2"
+        android:layout_width="match_parent"
+        android:layout_height="21dp"
+        android:background="#673AB7" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="0dp"
+        android:orientation="horizontal"
+        >
 
-        <TextView
+        <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="0dp"
 
-            android:text="Enter The Amount" />
+            app:cardBackgroundColor="#673AB7"
+            app:cardCornerRadius="25dp"
+            app:cardElevation="0dp"
+            app:contentPadding="20dp">
 
-        <EditText
-            android:id="@+id/txtamount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginStart="0dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginEnd="0dp"
+                android:text="Enter The Amount"
+                android:textAlignment="textStart"
+                android:textColor="@color/white" />
+
+            <EditText
+                android:id="@+id/txtamount"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="125dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="0dp"
+                android:ems="10"
+                android:textColor="#FFFFFF" />
+        </androidx.cardview.widget.CardView>
 
 
     </LinearLayout>
@@ -47,19 +81,60 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="-20dp"
+        android:layout_marginEnd="0dp"
         android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="0dp"
 
-            android:text="From" />
+            app:cardBackgroundColor="#8A673AB7"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="0dp"
+            app:contentPadding="20dp">
 
-        <Spinner
-            android:id="@+id/spfrom"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10" />
+            <Spinner
+                android:id="@+id/spfrom"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="-5dp"
+                android:layout_marginEnd="0dp"
+                android:ems="10" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="0dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="0dp"
+                android:text="From"
+                android:textColor="#FFFFFF" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="120dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="0dp"
+
+                android:text="To"
+                android:textColor="#FFFFFF" />
+
+            <Spinner
+                android:id="@+id/spto"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="150dp"
+                android:layout_marginTop="-5dp"
+                android:layout_marginEnd="0dp"
+                android:ems="10" />
+        </androidx.cardview.widget.CardView>
 
 
     </LinearLayout>
@@ -67,19 +142,16 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="0dp"
         android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
-            android:text="To" />
-
-        <Spinner
-            android:id="@+id/spto"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10" />
+            android:id="@+id/result1"
+            android:text="Result" />
 
 
     </LinearLayout>
@@ -87,16 +159,38 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="0dp"
         android:orientation="horizontal">
 
         <Button
+            android:id="@+id/btn1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Convert"
-            android:background="@color/black"
-            android:id="@+id/btn1"/>
+            app:cardBackgroundColor="#673AB7"
+            app:cardCornerRadius="10dp"
 
+            app:contentPadding="20dp" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="0dp"
+        android:orientation="horizontal"/>
 </LinearLayout>
