--- a/app/src/main/res/layout/content_main3.xml
+++ b/app/src/main/res/layout/content_main3.xml
@@ -51,12 +51,8 @@
             <View
                 android:id="@+id/divider"
                 android:layout_width="match_parent"
-                android:layout_height="10dp"
+                android:layout_height="19dp"
                 android:background="?android:attr/listDivider" />
-
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -95,12 +91,12 @@
                 android:id="@+id/cardview"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginStart="18dp"
-                android:layout_marginTop="18dp"
-                android:layout_marginEnd="18dp"
-                app:cardBackgroundColor="#5E5B63"
-                app:cardCornerRadius="4dp"
-                app:cardElevation="4dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="-10dp"
+                android:layout_marginEnd="30dp"
+                app:cardBackgroundColor="#0F0C13"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="10dp"
                 app:contentPadding="8dp">
 
                 <TextView
@@ -125,47 +121,59 @@
 
             </androidx.cardview.widget.CardView>
 
-            <View
-                android:id="@+id/divider2"
-                android:layout_width="match_parent"
-                android:layout_height="16dp"
-                android:background="?android:attr/listDivider" />
-
             <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <HorizontalScrollView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
 
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal">
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="378dp"
+                        android:layout_height="400dp"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginTop="18dp"
+                        android:layout_marginEnd="18dp"
+                        app:cardBackgroundColor="#673AB7"
+                        app:cardCornerRadius="30dp"
+                        app:cardElevation="0dp"
+                        app:contentPadding="20dp">
 
                         <androidx.constraintlayout.utils.widget.ImageFilterButton
-                            android:id="@+id/imageFilterButton4"
-                            android:layout_width="220dp"
-                            android:layout_height="180dp"
+                            android:id="@+id/imageFilterButton"
+                            android:layout_width="168dp"
+                            android:layout_height="174dp"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginTop="200dp"
+                            android:layout_marginEnd="0dp"
                             android:layout_weight="1"
-                            app:srcCompat="@drawable/pendapatan" />
+                            app:srcCompat="@drawable/moneycurrency" />
 
                         <androidx.constraintlayout.utils.widget.ImageFilterButton
                             android:id="@+id/imageFilterButton5"
-                            android:layout_width="220dp"
-                            android:layout_height="180dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="173dp"
+                            android:layout_marginStart="190dp"
+                            android:layout_marginTop="18dp"
+                            android:layout_marginEnd="0dp"
                             android:layout_weight="1"
                             app:srcCompat="@drawable/moneyspend" />
 
                         <androidx.constraintlayout.utils.widget.ImageFilterButton
-                            android:id="@+id/imageFilterButton"
-                            android:layout_width="220dp"
-                            android:layout_height="180dp"
+                            android:id="@+id/imageFilterButton4"
+                            android:layout_width="168dp"
+                            android:layout_height="174dp"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginTop="18dp"
+                            android:layout_marginEnd="10dp"
                             android:layout_weight="1"
-                            app:srcCompat="@drawable/moneycurrency" />
-                    </LinearLayout>
-                </HorizontalScrollView>
+                            app:srcCompat="@drawable/pendapatan" />
+                    </androidx.cardview.widget.CardView>
+
+                </LinearLayout>
+
             </com.google.android.material.bottomnavigation.BottomNavigationView>
 
         </LinearLayout>
