--- a/app/src/main/res/layout/activity_create3.xml
+++ b/app/src/main/res/layout/activity_create3.xml
@@ -57,8 +57,7 @@
         <TextView
             android:id="@+id/tv_once_date"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="date picker" />
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <Button
