--- a/app/src/main/res/layout/activity_money_currency_converter.xml
+++ b/app/src/main/res/layout/activity_money_currency_converter.xml
@@ -27,12 +27,6 @@
 
     </LinearLayout>
 
-    <View
-        android:id="@+id/divider2"
-        android:layout_width="match_parent"
-        android:layout_height="21dp"
-        android:background="#673AB7" />
-
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -72,7 +66,8 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="0dp"
                 android:ems="10"
-                android:textColor="#FFFFFF" />
+                android:textColor="#FFFFFF"
+                android:inputType="number"/>
         </androidx.cardview.widget.CardView>
 
 
