--- a/app/src/main/res/layout/content_main3.xml
+++ b/app/src/main/res/layout/content_main3.xml
@@ -152,7 +152,7 @@
                             app:srcCompat="@drawable/moneycurrency" />
 
                         <androidx.constraintlayout.utils.widget.ImageFilterButton
-                            android:id="@+id/imageFilterButton5"
+                            android:id="@+id/imageFilterButton3"
                             android:layout_width="wrap_content"
                             android:layout_height="173dp"
                             android:layout_marginStart="190dp"
@@ -160,6 +160,17 @@
                             android:layout_marginEnd="0dp"
                             android:layout_weight="1"
                             app:srcCompat="@drawable/moneyspend" />
+
+                        <androidx.constraintlayout.utils.widget.ImageFilterButton
+                            android:id="@+id/imageFilterButton2"
+                            android:layout_width="150dp"
+                            android:layout_height="179dp"
+                            android:layout_marginStart="190dp"
+                            android:layout_marginTop="200dp"
+                            android:layout_marginEnd="0dp"
+                            android:layout_weight="1"
+                            app:srcCompat="@android:drawable/ic_dialog_info"
+                            tools:srcCompat="@android:drawable/ic_dialog_info" />
 
                         <androidx.constraintlayout.utils.widget.ImageFilterButton
                             android:id="@+id/imageFilterButton4"
