--- a/app/src/main/res/layout/content_main3.xml
+++ b/app/src/main/res/layout/content_main3.xml
@@ -119,6 +119,17 @@
                     android:textSize="20sp"
                     tools:text="Rp.500.000" />
 
+                <ImageButton
+                    android:id="@+id/imageButton2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="150dp"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginEnd="0dp"
+                    android:background="@color/purple_500"
+                    android:gravity="center"
+                    app:srcCompat="@android:drawable/ic_menu_delete" />
+
             </androidx.cardview.widget.CardView>
 
             <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -181,6 +192,7 @@
                             android:layout_marginEnd="10dp"
                             android:layout_weight="1"
                             app:srcCompat="@drawable/pendapatan" />
+
                     </androidx.cardview.widget.CardView>
 
                 </LinearLayout>
