--- a/app/src/main/res/layout/content_main3.xml
+++ b/app/src/main/res/layout/content_main3.xml
@@ -180,8 +180,8 @@
                             android:layout_marginTop="200dp"
                             android:layout_marginEnd="0dp"
                             android:layout_weight="1"
-                            app:srcCompat="@android:drawable/ic_dialog_info"
-                            tools:srcCompat="@android:drawable/ic_dialog_info" />
+                            app:srcCompat="@drawable/ic_baseline_settings_24"
+                            tools:srcCompat="@drawable/ic_baseline_settings_24" />
 
                         <androidx.constraintlayout.utils.widget.ImageFilterButton
                             android:id="@+id/imageFilterButton4"
