--- a/app/src/main/res/layout/content_main3.xml
+++ b/app/src/main/res/layout/content_main3.xml
@@ -180,6 +180,7 @@
                             android:layout_marginTop="200dp"
                             android:layout_marginEnd="0dp"
                             android:layout_weight="1"
+                            android:background="#FFFFFF"
                             app:srcCompat="@drawable/ic_baseline_settings_24"
                             tools:srcCompat="@drawable/ic_baseline_settings_24" />
 
