--- a/app/src/main/res/layout/item_pendapatan.xml
+++ b/app/src/main/res/layout/item_pendapatan.xml
@@ -38,6 +38,20 @@
             android:textSize="16sp"
             tools:text="Rp.500.000,0" />
 
+        <TextView
+            android:id="@+id/tvDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tvPendapatan"
+            android:layout_alignParentEnd="true"
+            android:layout_gravity="start|center_vertical"
+            android:layout_marginTop="-8dp"
+            android:layout_marginEnd="106dp"
+            android:fontFamily="@font/notosans_bold"
+            android:textColor="@color/divider"
+            android:textSize="16sp"
+            tools:text="12/13/2021" />
+
         <ImageView
             android:id="@+id/ivDelete2"
             android:layout_width="wrap_content"
