--- a/app/src/main/res/layout/activity_money_currency_converter.xml
+++ b/app/src/main/res/layout/activity_money_currency_converter.xml
@@ -30,16 +30,15 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="0dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="0dp"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
 
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="0dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="0dp"
 
@@ -66,8 +65,8 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="0dp"
                 android:ems="10"
-                android:textColor="#FFFFFF"
-                android:inputType="number"/>
+                android:inputType="number"
+                android:textColor="#FFFFFF" />
         </androidx.cardview.widget.CardView>
 
 
@@ -76,7 +75,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="0dp"
         android:layout_marginTop="-20dp"
         android:layout_marginEnd="0dp"
         android:orientation="horizontal">
