--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -7,6 +7,13 @@
     tools:context="com.fhmg.artosexchangeapp.SettingsActivity"
     android:padding="24dp"
     android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="match_parent"
+        android:layout_height="195dp"
+        app:srcCompat="@drawable/ic_launcher_foreground" />
+
     <androidx.cardview.widget.CardView
 
         android:layout_width="match_parent"
